[fix] Fix img that overflow-x

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -98,3 +98,9 @@ body:has(*.no-nav) nav {
 	display: none;
 
 }
+
+img {
+
+	width: 100%;
+
+}
